fixed alignment and added functionality to the navbar

--- a/css/about.css
+++ b/css/about.css
@@ -48,12 +48,14 @@
 }
 
 .about-header {
-  font-size: 4rem;
+  font-size: 6rem;
   margin: 1rem;
+  color: #fff;
+
 }
 
 .about-text {
-  font-size: 2rem;
+  font-size: 3.2rem;
   margin: 1rem;
 }
 
