--- a/css/nav.css
+++ b/css/nav.css
@@ -1,4 +1,4 @@
-.header {
+nav .header {
   height: 8rem;
   max-width: 100%;
 }
@@ -23,16 +23,19 @@
 }
 .header nav,
 .header ul,
-.header li,
-.header a {
+.header li {
+
   color: #fff;
   font-size: 1.6rem;
   font-weight: bold;
   padding-right: 1rem;
+  padding-top: 0.5rem;
   border-radius: 3px;
   text-transform: uppercase;
   text-decoration: none;
 }
+
+
 .header_btn:hover {
   cursor: pointer;
   color: #777;
@@ -47,6 +50,9 @@
   margin-right: 2rem;
   margin-top: 2rem;
   display: none;
+}
+
+.header_list {
 }
 
 .scroll-down nav {
@@ -66,7 +72,6 @@
 }
 
 @media (max-width: 59.5em) {
-
 }
 
 @media (max-width: 54em) {
@@ -90,8 +95,7 @@
   }
   .header nav,
   .header ul,
-  .header li,
-  .header a {
+  .header li {
     font-size: 1.6rem;
   }
   .header_btn:hover,
@@ -113,18 +117,10 @@
   .header_logo {
     font-size: 2rem;
   }
-  .header a {
-    font-size: 1.2rem;
-  }
+
   .header_list li {
     padding: 0;
     margin: 0;
     line-height: 3;
-  }
-}
-
-@media (max-width: 21.25em) {
-  .header a {
-    font-size: 1rem;
   }
 }
