--- a/css/project.css
+++ b/css/project.css
@@ -1,7 +1,7 @@
 .project {
   min-height: 100vh;
   max-width: 100%;
-  background-color: #f5f5f5;
+background-color: #1a1a2e;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -19,12 +19,13 @@
   gap: 2rem;
   z-index: 1;
   padding: 5rem 2rem;
+  border-radius: 10px;
 }
 
 .card-container-header {
   font-size: 6rem;
   font-weight: 700;
-  color: #ffc400;
+  color: #fff;
 }
 
 .cards-container {
